# DKLENS

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  devbox.json  dklens  docklens  main.py  message_no_vuln_docklens.txt  pyproject.toml  titre_docklens.txt
.github/workflows/: ci.yml  docker-publish.yml
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: 1-1-cli-entry-point-tui-menu-and-scan-command-skeleton.md  2-1-validate-and-pull-docker-image.md  2-2-extract-docker-image-filesystem.md  2-3-detect-linux-distribution-inside-image.md  2-4-extract-installed-system-and-language-packages.md  3-1-set-up-local-cve-data-storage.md  3-2-map-installed-packages-to-cpe-identifiers.md  3-3-retrieve-cves-associated-with-packages-osv-nvd.md  4-1-vulnerability-severity-ranking.md  4-2-image-risk-score-computation.md  4-3-patch-fix-recommendation-engine.md  4-4-remediation-fix-links-in-output.md  5-1-rich-terminal-output-reporting.md  5-2-github-actions-ci-workflow.md  6-1-add-euvd-vulnerability-source-support.md  7-1-fastapi-rest-api-server.md  8-1-documentation-threat-model.md  8-2-help-desk-in-tool-help.md  8-3-project-recap-status-summary.md  (+2 more)
api/: main.py
cache/: models.py  repository.py
cli/: interactive.py  menu.py  output.py  scan_command.py
config/: settings.py
cve/: cpe.py
docs/: summary.txt  tasks.txt
scanner/: docker_image.py  extractor.py  packages.py
tests/: test_docker_image.py  test_extractor.py  test_output.py  test_packages.py
vulns/: euvd_client.py  osv_client.py  scanner.py
(+13 files in other folders)
