[project]
name = "docklens"
version = "0.1.0"
description = "Container/Docker image vulnerability scanner"
authors = [
    {name = "B and N"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
