[project]
name = "docklens"
version = "0.1.0"
description = "Container/Docker image vulnerability scanner"
authors = [
    {name = "B and N"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
