[project]
name = "dklens"
version = "0.1.0"
description = "Container/Docker image vulnerability scanner"
authors = [
    {name = "B and N"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "docker>=7.0",
    "rich>=13.0",
    "httpx>=0.27",
    "typer>=0.12",
    "InquirerPy>=0.3.4",
    "reportlab>=4.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.4"

[tool.pytest.ini_options]
testpaths = ["tests"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
